12) Improper memset found by Marko Lindholm in the libsctp.a code
    for sctp_bindx.
13) Fix the stream reset functions to use the parameters properly
    per the newly forming draft. Still have a bug here where
    we can loose multiple stream resets (labeled with FIXME)
14) Kernel changes for sctp_sendx()
15) Kernel changes for MSG_SENDALL flag
16) sctp lib adde of sctp_sendx()


Patch 25)

1) Link Local addresses for V6 where the ll address
   is included implicitly would make a false decision to
   NOT list addresses. This has been fixed.
2) Fix switch back after failure
3) We run only one RTO timer. In the timing of
   things we would compare to any dest that had been
   idle longer than the HB-Delay value.. This is
   incorrect, we should take the longest value and
   HB if its greater than the RTO.
4) Fixed shutdown-received state so we get the
   shutdown and not return without stopping the
   timer and sending a S-A.
5) Chunk_output was not being called when a shutdown
   was queued on the v6 side. This is a bug that
   was fixed for v4 at the Munester Inter-op, but we
   missed the V6 side :-<
6) You can use NULL as the to argument in sctp_sendmsg
   for 1to1 style sockets.
7) Performance changes on the sender side of SCTP that
   provide signifigant gains in SACK processing as
   well as on destinations that fill up the ifp queue.
8) Fixed IPV6 to V4 mapping issue with V6 Mapped addresses
   in sctp_bindx
9) Get rid of warnings comparison in signed/unsigned.
10) Purged TCP_MODEL, so now it is always present.
11) Fixed a socketoption mbuf leak when a setsockopt() failed.
12) Fixed problem with mapped v4 addresses.
13) Iterator & was a &&
14) Link local should also include ipv4 private addresses, since
    if its on the local link it better be also part of the 
    private address space :-D
15) A performance improvement introduced a bug that caused
    HB's to stop being sent due to a miscaluclation of time.